2011-07-13  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #350593
	2011-06-28  Kiu Kwan Leung  <kleung@redhat.com>
	
	* src/org/eclipse/linuxtools/changelog/core/actions/PrepareChangeLogAction.java (outputMultipleEntryChangeLog): 
	Look for dirty ChangeLog.
	(extractSynchronizeModelInfo): Ditto.
	* src/org/eclipse/linuxtools/changelog/core/editors/ChangeLogEditor.java (isForceNewLogEntry): New method.
	(setForceNewLogEntry): Ditto. 
	* src/org/eclipse/linuxtools/changelog/core/formatters/GNUFormat.java (mergeChangelog): Add
	check for a forced new entry.

2011-05-31  Jeff Johnston  <jjohnstn@redhat.com>

	* plugin.xml: Add back key bindings for CTRL+ALT+P in text editor and
	compare editor which reverts previous change.

2011-04-01  Jeff Johnston  <jjohnstn@redhat.com>

 	Bug #341534
	* plugin.xml: Fix conflict with CTRL+ALT+P within the ChangeLog plug-in
	itself.

2011-01-27  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #332621
	* src/org/eclipse/linuxtools/changelog/core/editors/GNUHyperlinkDetector.java (getDocumentLocation): 
	Use the location of the ChangeLog directly rather than calculating from the workspace-root.

2010-12-10  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/changelog/core/formatters/GNUFormat.java (mergeChangelog): Added call
	to removeWhitespaceOnlyLines.
	(removeWhitespaceOnlyLines): New method. Lines containing whitespace only are removed by next merge.
	This happens only if entries of the same file with changes in different functions happen to
	contain whitespace only lines. See Eclipse BZ #331688 for more info.

2010-12-03  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Bump up version to 2.7.0 for 0.7 release.

2010-12-02  Severin Gehwolf  <sgehwolf@redhat.com>

	* META-INF/MANIFEST.MF: Add "Eclipse-ExtensibleAPI: true" header,
	since fragments export new packages.

2010-12-01  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #331243
	* plugin.xml: Add enablement for subclipse as well for Prepare ChangeLog.
